// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountEnvironments renders correctly 1`] = `
<div>
  <div
    class="card-header small-title"
  >
    environment-configurations
    <button
      aria-label="add"
      class="btn btn-md btn-primary btn-monospaced"
      type="button"
      value="add"
    >
      <svg
        class="lexicon-icon lexicon-icon-plus"
      >
        <use
          xlink:href="#plus"
        />
      </svg>
    </button>
  </div>
  <div
    aria-orientation="vertical"
    class="panel-group"
    role="tablist"
  >
    <div
      class="panel"
    >
      <button
        class="btn-link panel-header"
        role="tab"
        type="button"
      >
        <div
          class="panel-title"
        >
          <h4>
            All Selections
          </h4>
          <div
            class="panel-subtitle"
          >
            Liferay DXP Production
          </div>
          <div
            class="panel-subtitle"
          >
            7.1
          </div>
        </div>
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </button>
    </div>
    <div
      class="panel"
    >
      <button
        class="btn-link panel-header"
        role="tab"
        type="button"
      >
        <div
          class="panel-title"
        >
          <h4>
            No Search, Commerce, Cloud Services Selection
          </h4>
          <div
            class="panel-subtitle"
          >
            Liferay DXP Production
          </div>
          <div
            class="panel-subtitle"
          >
            7.1
          </div>
        </div>
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`AccountEnvironments renders details when an environment is clicked 1`] = `
<div>
  <div
    class="card-header small-title"
  >
    environment-configurations
  </div>
  <div
    aria-orientation="vertical"
    class="panel-group"
    role="tablist"
  >
    <div
      class="panel"
    >
      <button
        class="btn-link panel-header expanded"
        role="tab"
        type="button"
      >
        <div
          class="panel-title"
        >
          <h4>
            All Selections
          </h4>
          <div
            class="panel-subtitle"
          >
            Liferay DXP Production
          </div>
          <div
            class="panel-subtitle"
          >
            7.1
          </div>
        </div>
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </button>
      <div
        role="tabpanel"
      >
        <div
          class="panel-body"
        >
          <div
            class="col-sm-6"
          >
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                commerce-version
              </div>
              <div>
                1.0
              </div>
            </div>
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                operating-system
              </div>
              <div>
                CentOS 7
              </div>
            </div>
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                application-server
              </div>
              <div>
                Tomcat 9.0
              </div>
            </div>
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                search
              </div>
              <div>
                Elasticsearch 6.x, solr-5
              </div>
            </div>
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                cloud-services
              </div>
              <div>
                AWS S3
              </div>
            </div>
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                portal-ext
              </div>
              <a
                href="/portal-ext/attachment/url"
                rel="noopener noreferrer"
                target="_blank"
              >
                Portal Ext File
              </a>
            </div>
          </div>
          <div
            class="col-sm-6"
          >
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                java-version
              </div>
              <div>
                IBM JDK 8
              </div>
            </div>
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                database
              </div>
              <div>
                MariaDB 10.2
              </div>
            </div>
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                browser
              </div>
              <div>
                Chrome
              </div>
            </div>
            <div
              class="panel-detail"
            >
              <div
                class="panel-label"
              >
                patch-info
              </div>
              <a
                href="/patch/attachment/url"
                rel="noopener noreferrer"
                target="_blank"
              >
                Patch File
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="panel"
    >
      <button
        class="btn-link panel-header"
        role="tab"
        type="button"
      >
        <div
          class="panel-title"
        >
          <h4>
            No Search, Commerce, Cloud Services Selection
          </h4>
          <div
            class="panel-subtitle"
          >
            Liferay DXP Production
          </div>
          <div
            class="panel-subtitle"
          >
            7.1
          </div>
        </div>
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`AccountEnvironments renders no results message when there is no existing environment 1`] = `
<div>
  <div
    class="card-header small-title"
  >
    environment-configurations
  </div>
  <div
    class="no-results"
  >
    no-environment-details
  </div>
</div>
`;
